(executable
 (name dkstats)
 (public_name dkstats)
 (modules ("dkstats" "data" "distribution"))
 (libraries lambdapi.core lambdapi.handle timed bindlib))

(executable
 (name dkritic)
 (public_name dkritic)
 (modules ("dkritic" "critical_pairs" "unification"))
 (libraries lambdapi.core lambdapi.handle timed bindlib))